--- a/Index.html
+++ b/Index.html
@@ -6,17 +6,35 @@
 	<link rel="stylesheet" href="src/css/estilo1.css">
 </head>
 	<body>
-		<nav id="menuNav">	
-			<ul>
-				<li><img src="src/img/Logo.jpg" id="logoNav"></li>
-            	<li>Home</li>
-            	<li>Menú</li>
-            	<li>Reservacion</li>
-            	<li>Contacto</li>
-            	<li>Nosotros</li>
-			</ul>
-		</nav>
+		<header>
+		<div id="menu">
+			
+			<div id="logo">
+				<img src="src/img/Logo.jpg" id="logoNav">
+			</div>
+			
+			<div id="navegacion">
+				<nav id="menuNav">	
+					<ul>
+		            	<li>Home</li>
+		            	<li>Menú</li>
+		            	<li>Reservacion</li>
+		            	<li>Contacto</li>
+		            	<li>Nosotros</li>
+					</ul>
+				</nav>
+			</div>
+			
+			<div id="inicioSesion">
+					
+			</div>
+
+		</div>		
+	</header>
+
 	<div id="galeria"></div>
+	
 	<div id="timeline"></div>
+	
 	</body>
 </html>
