--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -1,17 +1,19 @@
 <html>
 <head>
-	<title>El Kafetal</title>
+	<meta charset="UTF-8">
+	<title>El Kfetal®</title>
 	<link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
 </head>
 <body>
 	<nav id="menuNav">	
 			<ul>
-				<li><img src="src/img/Logo.jpg" id="logoNav"></li>
+				<li><img src="../img/Logo.jpg" id="logoNav"></li>
             	<li>Home</li>
             	<li>Menú</li>
             	<li>Reservacion</li>
             	<li>Contacto</li>
             	<li>Nosotros</li>
+
 			</ul>
 		</nav>
 	<div id="menu_barra">soy el menu
