--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 			<div id="navegacion">
 				<nav id="menuNav">	
 					<ul>
-		            	<li>Home</li>
+		            	<li><a href="#">Home</a></li>
 		            	<li>Menú</li>
 		            	<li>Reservacion</li>
 		            	<li>Contacto</li>
