todos los menus

--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
-	<link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
+
 	<link rel="stylesheet" href="../css/estilo1.css">
 </head>
 
@@ -38,49 +38,8 @@
 -->
         </div>
     </header>
-
-
-
-
-
-
-
-
-
-
-
-<!--
-
-	<nav id="menuNav">
-			<ul>
-				<li><img src="../img/Logo.jpg" id="logoNav"></li>
-            	<li>Home</li>
-            	<li>Menú</li>
-            	<li>Reservacion</li>
-            	<li>Contacto</li>
-            	<li>Nosotros</li>
-
-			</ul>
-		</nav>
-
--->
-
-<br>
-	<div id="menu_barra">soy el menu
-		<ul>
-			<li class="lineas"></li>
-			<li class="lineas"></li>
-			<li class="lineas"></li>
-			<li class="lineas"></li>
-			<li class="lineas"></li>
-			<li class="lineas"></li>
-			<li class="lineas"></li>
-			<li class="lineas"></li>
-			<li class="lineas"></li>
-		</ul>
-	</div>
-	<div id="galeria_menu">soy la galeria
-		<div id="descripcion_Alimento">soy la descripcion</div>
-	</div>
+<center>
+    <h1>Contacto</h1>
+    </center>
 </body>
 </html>
