--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -2,14 +2,43 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Inicio de sesion </title>
-
+    <title>El Kfetal®</title>
+    <link rel="stylesheet" href="../css/estilo1.css">
 
 </head>
 <body>
+    <header>
+        <div id="menu">
+
+            <div id="logo">
+                <img src="../images/Logo1.jpg" id="logoNav">
+            </div>
+
+            <div id="navegacion">
+
+                <section id="espacio_sup">
+                <a href="inicio.html" style = " float:right">Inicio de sesion</a>
+                </section>
+                <nav id="menuNav">
+                    <ul>
+                       <li><a href="../../Index.html">Home</a></li>
+                        <li><a href="menu.html">Menú</a></li>
+                        <li><a href="reservaciones.html">Reservación</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                    </ul>
+                </nav>
+            </div>
+<!--
+            <div id="inicioSesion">
+
+            </div>
+-->
+        </div>
+    </header>
 
 <center  >
-    <h2>Inicio de sesion</h2>
+    <h2>Bienvenido!!</h2>
 
     <br>
     <b>Correo :</b>
