--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -73,18 +73,19 @@
         </div>
     </header>
 <br>
-	<div id="menu_barra">soy el menu
+	<div id="menu_barra"><h3 style="color:black; text-align: center">Menú</h3>
 		<ul>
-			<li class="lin">cosa</li>
-			<li class="lin">asdasd</li>
-			<li class="lin">adasd</li>
-			<li class="lin">asdasd</li>
-			<li class="lin">asdasd</li>
-			<li class="lin">ada</li>
-			<li class="lin">asdas</li>
-			<li class="lin">asdad</li>
-			<li class="lin">asdasd</li>
-		</ul>
+            <li class="lin">Cafe</li>
+            <li class="lin">Infusiones</li>
+            <li class="lin">Te Chai</li>
+            <li class="lin">Capuchino</li>
+            <li class="lin">Malteadas</li>
+            <li class="lin">Soda Italiana</li>
+            <li class="lin">Smoothies</li>
+            <li class="lin">Frappes</li>
+            <li class="lin">Snack</li>
+            <li class="lin">Otros</li>
+        </ul>
 	</div>
 
     <!--Galeria-->
