--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -4,6 +4,7 @@
 	<title>El Kfetal®</title>
 
 	<link rel="stylesheet" href="../css/estilo1.css">
+        <link rel="stylesheet" type="text/css" href="../css/miCss.css">
 </head>
 
 
@@ -38,8 +39,67 @@
 -->
         </div>
     </header>
-<center>
-    <h1>Contacto</h1>
-    </center>
+
+
+
+
+
+
+
+
+
+
+<div>
+<div class = "texto">
+<h2> El Kfetal </h2>
+<p>Te atenderemos con gusto <br> AV. Palmas No 109, Col. El rosal <br> de lunes a viernes de 6:30 hrs a 22.00 hrs<br> sabado de 9:00 hrs a 22:00 hrs <br> llamanos al 67-96-15-94</p>
+<div id = "mapa">
+<img src="../images/mapa.png" style = WIDTH:500; HEIGHT:500;>
+</div>
+</div>
+</div>
+
+<script>
+var x = document.getElementById("demo");
+
+function getLocation() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition, showError);
+    } else {
+        x.innerHTML = "Geolocation is not supported by this browser.";
+    }
+}
+
+function showPosition(position) {
+    var latlon = position.coords.latitude + "," + position.coords.longitude;
+
+    var img_url = "http://maps.googleapis.com/maps/api/staticmap?center="
+    +latlon+"&zoom=14&size=400x300&sensor=false";
+    document.getElementById("mapa").innerHTML = "<img src='"+img_url+"'>";
+}
+
+function showError(error) {
+    switch(error.code) {
+        case error.PERMISSION_DENIED:
+            x.innerHTML = "User denied the request for Geolocation."
+            break;
+        case error.POSITION_UNAVAILABLE:
+            x.innerHTML = "Location information is unavailable."
+            break;
+        case error.TIMEOUT:
+            x.innerHTML = "The request to get user location timed out."
+            break;
+        case error.UNKNOWN_ERROR:
+            x.innerHTML = "An unknown error occurred."
+            break;
+    }
+}
+</script>
+
+
+
+
+
+
 </body>
 </html>
