--- a/src/html/nosotros.html
+++ b/src/html/nosotros.html
@@ -4,6 +4,7 @@
 	<title>El Kfetal®</title>
 
 	<link rel="stylesheet" href="../css/estilo1.css">
+    <link rel="stylesheet" type="text/css" href="../css/miCss.css">
 </head>
 
 
@@ -38,8 +39,25 @@
 -->
         </div>
     </header>
-<center>
-    <h1>Nosotros</h1>
-    </center>
+
+
+
+
+
+<div class = "info">
+<h3>Nuesta Historia</h3>
+<div class = "cuadro">
+ <h5>Historia</h5>
+</div>
+<div class = "cuadro">
+ <h5>Mapa de Ubicacion</h5>
+</div>
+<div class = "cuadro-derecho">
+<h5>Imagen</h5>
+</div>
+</div>
+
+
+
 </body>
 </html>
