--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -54,50 +54,24 @@
 <h2> El Kfetal </h2>
 <p>Te atenderemos con gusto <br> AV. Palmas No 109, Col. El rosal <br> de lunes a viernes de 6:30 hrs a 22.00 hrs<br> sabado de 9:00 hrs a 22:00 hrs <br> llamanos al 67-96-15-94</p>
 <div id = "mapa">
-<img src="../images/mapa.png" style = WIDTH:500; HEIGHT:500;>
 </div>
 </div>
 </div>
+
+ 
+ <script src="https://maps.googleapis.com/maps/api/js"></script>
 
 <script>
-var x = document.getElementById("demo");
-
-function getLocation() {
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition, showError);
-    } else {
-        x.innerHTML = "Geolocation is not supported by this browser.";
+  function initialize() {
+    var mapOptions = {
+      center: new google.maps.LatLng(44.5403, -78.5463),
+      zoom: 8,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
     }
-}
-
-function showPosition(position) {
-    var latlon = position.coords.latitude + "," + position.coords.longitude;
-
-    var img_url = "http://maps.googleapis.com/maps/api/staticmap?center="
-    +latlon+"&zoom=14&size=400x300&sensor=false";
-    document.getElementById("mapa").innerHTML = "<img src='"+img_url+"'>";
-}
-
-function showError(error) {
-    switch(error.code) {
-        case error.PERMISSION_DENIED:
-            x.innerHTML = "User denied the request for Geolocation."
-            break;
-        case error.POSITION_UNAVAILABLE:
-            x.innerHTML = "Location information is unavailable."
-            break;
-        case error.TIMEOUT:
-            x.innerHTML = "The request to get user location timed out."
-            break;
-        case error.UNKNOWN_ERROR:
-            x.innerHTML = "An unknown error occurred."
-            break;
-    }
-}
+    var map = new google.maps.Map(document.getElementById('mapa'), mapOptions);
+  }
+   google.maps.event.addDomListener(window, 'load', initialize);
 </script>
-
-
-
 
 
 
