cambió ancho de header

--- a/Index.html
+++ b/Index.html
@@ -59,11 +59,11 @@
 				</section>
 				<nav id="menuNav">
 					<ul>
-		            	<li><a href="Index.html">Home</a></li>
-		            	<li><a href="src/html/menu.html">Menú</a></li>
-		            	<li><a href="src/html/agenda_reservacion.html">Reservación</a></li>
-		            	<li><a href="src/html/contacto.html">Contacto</a></li>
-		            	<li><a href="src/html/nosotros.html">Nosotros</a></li>
+		            	<li><a class="boton_menu" href="Index.html">Home</a></li>
+		            	<li><a class="boton_menu" href="src/html/menu.html">Menú</a></li>
+		            	<li><a class="boton_menu" href="src/html/agenda_reservacion.html">Reservación</a></li>
+		            	<li><a class="boton_menu" href="src/html/contacto.html">Contacto</a></li>
+		            	<li><a class="boton_menu" href="src/html/nosotros.html">Nosotros</a></li>
 					</ul>
 				</nav>
 			</div>
