--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -43,11 +43,11 @@
                 </section>
                 <nav id="menuNav">
                     <ul>
-                       <li class="li_menu"><a href="../../Index.html">Home</a></li>
-                        <li class="li_menu"><a href="menu.html">Menú</a></li>
-                        <li class="li_menu"><a href="agenda_reservacion.html">Reservación</a></li>
-                        <li class="li_menu"><a href="contacto.html">Contacto</a></li>
-                        <li class="li_menu"><a href="nosotros.html">Nosotros</a></li>
+                       <li class="li_menu"><a class="boton_menu" href="../../Index.html">Home</a></li>
+                        <li class="li_menu"><a class="boton_menu" href="menu.html">Menú</a></li>
+                        <li class="li_menu"><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
+                        <li class="li_menu"><a class="boton_menu" href="contacto.html">Contacto</a></li>
+                        <li class="li_menu"><a class="boton_menu" href="nosotros.html">Nosotros</a></li>
                     </ul>
                 </nav>
             </div>
