--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -25,9 +25,9 @@
                 </section>
                 <nav id="menuNav">
                     <ul>
-			            	<li><a href="reservaciones.html">Reservaciones</a></li>
-			            	<li><a href="administra_promociones.html">Promociones</a></li>
-			            	<li><a href="envia_correo.html">Envia promociones</a></li>
+			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
+			            	<li><a class="boton_menu" href="administra_promociones.html">Promociones</a></li>
+			            	<li><a class="boton_menu" href="envia_correo.html">Envia promociones</a></li>
                     </ul>
                 </nav>
             </div>
