--- a/src/html/nosotros.html
+++ b/src/html/nosotros.html
@@ -24,11 +24,11 @@
                 </section>
                 <nav id="menuNav">
                     <ul>
-                       <li><a href="../../Index.html">Home</a></li>
-                        <li><a href="menu.html">Menú</a></li>
-                        <li><a href="agenda_reservacion.html">Reservación</a></li>
-                        <li><a href="contacto.html">Contacto</a></li>
-                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a class="boton_menu" href="../../Index.html">Home</a></li>
+                        <li><a class="boton_menu" href="menu.html">Menú</a></li>
+                        <li><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
+                        <li><a class="boton_menu" href="contacto.html">Contacto</a></li>
+                        <li><a class="boton_menu" href="nosotros.html">Nosotros</a></li>
                     </ul>
                 </nav>
             </div>
