--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" >
 	<title>El Kfetal®</title>
-	<link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
-	<link rel="stylesheet" href="../css/estilos1.css">
-	<script type="text/javascript" src="../ckeditor/ckeditor.js"></script>
+
+	<link rel="stylesheet" href="../../css/estilo1.css">
+	<script type="text/javascript" src="../../ckeditor/ckeditor.js"></script>
 	</head>
 	<body>
 
@@ -15,13 +15,13 @@
         <div id="menu">
 
             <div id="logo">
-                <img src="../images/Logo1.jpg" id="logoNav">
+                <img src="../../images/Logo1.jpg" id="logoNav">
             </div>
 
             <div id="navegacion">
 
                 <section id="espacio_sup">
-                <a href="inicio.html" style = " float:right">Inicio de sesion</a>
+
                 </section>
                 <nav id="menuNav">
                     <ul>
@@ -57,6 +57,33 @@
 			['Maximize', 'ShowBlocks','-','About','EqnEditor']
 		]
 		});
+
+
+
+
+
+function cambiar()
+{
+  document.getElementById('data').innerHTML = CKEDITOR.instances['editor1'].getData();
+}
+
+//var contenido = CKEDITOR.instances['miTextArea'].getData();
 		</script>
+
+
+
+
+
+
+<button onclick="cambiar()" > Aceptar </button>
+<br>
+<br>
+<br>
+
+<div id="data">
+
+</div>
+
+
 </body>
 </html>
