--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -34,10 +34,17 @@
         </div>
     </header>
 
+		<center>
+		<h1>Envia promociones</h1>
+		</center>
+		<br>
 
-		<h1>Ejemplo CK Editor</h1>
-		<textarea cols="50" id="editor1" name="editor1" rows="10">
+		<div style = "width: 100.6%">
+
+		<textarea cols="50" id="editor1" name="editor1" rows="10" >
 		</textarea>
+		</div>
+
 		<script type="text/javascript">
 		CKEDITOR.replace( 'editor1', {
 		toolbar: [
@@ -72,6 +79,8 @@ function cambiar()
 
 
 
+<br>
+<br>
 
 
 
