--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -69,10 +69,6 @@
 
 
 
-function cambiar()
-{
-  document.getElementById('data').innerHTML = CKEDITOR.instances['editor1'].getData();
-}
 
 //var contenido = CKEDITOR.instances['miTextArea'].getData();
 		</script>
@@ -95,4 +91,6 @@ function cambiar()
 
 
 </body>
+
+<script src="../../js/script.js"></script>
 </html>
