ya manda correos

--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -51,26 +51,13 @@
 			['Source','-','Save','NewPage','Preview','-','Templates'],
 			['Cut','Copy','Paste','PasteText','PasteFromWord','-','Print', 'SpellChecker', 'Scayt'],
 			['Undo','Redo','-','Find','Replace','-','SelectAll','RemoveFormat'],
-			['Form', 'Checkbox', 'Radio', 'TextField', 'Textarea', 'Select', 'Button', 'ImageButton', 'HiddenField'],
 			'/',
 			['Bold','Italic','Underline','Strike','-','Subscript','Superscript'],
-			['NumberedList','BulletedList','-','Outdent','Indent','Blockquote'],
-			['JustifyLeft','JustifyCenter','JustifyRight','JustifyBlock'],
-			['Link','Unlink','Anchor'],
-			['Image','Flash','Table','HorizontalRule','Smiley','SpecialChar','PageBreak'],
-			'/',
-			['Styles','Format','Font','FontSize'],
-			['TextColor','BGColor'],
-			['Maximize', 'ShowBlocks','-','About','EqnEditor']
+
 		]
 		});
 
 
-
-
-
-
-//var contenido = CKEDITOR.instances['miTextArea'].getData();
 		</script>
 
 
@@ -80,7 +67,7 @@
 
 
 
-<button onclick="cambiar()" > Aceptar </button>
+<button onclick="envia_promo_correo()" > Aceptar </button>
 <br>
 <br>
 <br>
