--- a/src/html/administrador/confirma_reservación.html
+++ b/src/html/administrador/confirma_reservación.html
@@ -15,7 +15,10 @@
 
 				<div id="navegacion">
 
-					<section id="espacio_sup"></section>
+					<section id="espacio_sup">
+						<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
+
+					</section>
 					<nav id="menuNav">
 						<ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
