--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -21,6 +21,7 @@
             <div id="navegacion">
 
                 <section id="espacio_sup">
+	<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
 
                 </section>
                 <nav id="menuNav">
