--- a/Index.html
+++ b/Index.html
@@ -75,6 +75,9 @@
 		</div>
 	</header>
 
+
+<div style="width:100%; height: 100%;">
+<div style="width:65%">
 	<div class="fluid_container" id="galeria">
 
         <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
@@ -99,8 +102,17 @@
 
             </div>
     </div>
+</div>
+</div>
 
-	<div id="timeline"></div>
+	<div id="timeline" style="width:30% ">
+
+		<h1>Aqui van promociones</h1>
+	</div>
+</div>
+
+
+
 
 	</body>
 </html>
