--- a/src/html/administrador/administra_promociones.html
+++ b/src/html/administrador/administra_promociones.html
@@ -13,9 +13,14 @@
 					<img src="../../images/Logo1.jpg" id="logoNav">
 				</div>
 
+
+
 				<div id="navegacion">
 
-					<section id="espacio_sup"></section>
+					<section id="espacio_sup">
+				<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
+
+					</section>
 					<nav id="menuNav">
 						<ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
