--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -42,23 +42,28 @@
 
 		<div style = "width: 100.6%">
 
-		<textarea cols="50" id="editor1" name="editor1" rows="10" >
-		</textarea>
-		</div>
 
+		<textarea cols="50" id="editor1" name="editor1" rows="10">
+		</textarea>
 		<script type="text/javascript">
 		CKEDITOR.replace( 'editor1', {
 		toolbar: [
 			['Source','-','Save','NewPage','Preview','-','Templates'],
 			['Cut','Copy','Paste','PasteText','PasteFromWord','-','Print', 'SpellChecker', 'Scayt'],
 			['Undo','Redo','-','Find','Replace','-','SelectAll','RemoveFormat'],
+			['Form', 'Checkbox', 'Radio', 'TextField', 'Textarea', 'Select', 'Button', 'ImageButton', 'HiddenField'],
 			'/',
 			['Bold','Italic','Underline','Strike','-','Subscript','Superscript'],
-
+			['NumberedList','BulletedList','-','Outdent','Indent','Blockquote'],
+			['JustifyLeft','JustifyCenter','JustifyRight','JustifyBlock'],
+			['Link','Unlink','Anchor'],
+			['Image','Flash','Table','HorizontalRule','Smiley','SpecialChar','PageBreak'],
+			'/',
+			['Styles','Format','Font','FontSize'],
+			['TextColor','BGColor'],
+			['Maximize', 'ShowBlocks','-','About','EqnEditor']
 		]
 		});
-
-
 		</script>
 
 
