--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -91,34 +91,34 @@
                     </ul>  
                 </div>
             <div class="contenido" id="galeria_menu">
+                <div style="width:65%">
+        <div class="fluid_container" id="galeria">
 
-            <!--Galeria-->
-                <div class="fluid_container" id="galeria">
-
-                    <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
-                        <div data-thumb="../images/home/slides/thumbs/bridge.jpg" data-src="../images/home/slides/bridge.jpg">
-
+            <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
+                <div data-thumb="../images/home/slides/thumbs/bridge.jpg" data-src="../images/home/slides/bridge.jpg">
 
 
-                        </div>
-                        <div data-thumb="../images/home/slides/thumbs/leaf.jpg" data-src="../images/home/slides/leaf.jpg">
 
-                        </div>
-                        <div data-thumb="../images/home/thumbs/road.jpg" data-src="../images/home/slides/road.jpg">
-
-                        </div>
-                        <div data-thumb="../images/home/thumbs/sea.jpg" data-src="../images/home/slides/sea.jpg">
-
-                        </div>
-                        <div data-thumb="../images/home/thumbs/shelter.jpg" data-src="../images/home/slides/shelter.jpg">
-
-                        </div>
-                        <div data-thumb="../images/home/thumbs/tree.jpg" data-src="../images/home/slides/tree.jpg">
-
-                    </div>
                 </div>
-             </div>
-                <!--Galeria-->
+                <div data-thumb="../images/home/slides/thumbs/leaf.jpg" data-src="../images/home/slides/leaf.jpg">
+
+                </div>
+                <div data-thumb="../images/home/thumbs/road.jpg" data-src="../images/home/slides/road.jpg">
+
+                </div>
+                <div data-thumb="../images/home/thumbs/sea.jpg" data-src="../images/home/slides/sea.jpg">
+
+                </div>
+                <div data-thumb="../images/home/thumbs/shelter.jpg" data-src="../images/home/slides/shelter.jpg">
+
+                </div>
+                <div data-thumb="../images/home/thumbs/tree.jpg" data-src="../images/home/slides/tree.jpg">
+
+                </div>
+        </div>
+    </div>
+</div>
+            
             </div>
             <div class="contenido" id="descripcion_menu">
              descripcion
