Agrega letrero a barra de navegacion

--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,8 @@
     <script type='text/javascript' src='src/js/jquery.mobile.customized.min.js'></script>
     <script type='text/javascript' src='src/js/jquery.easing.1.3.js'></script>
     <script type='text/javascript' src='src/js/camera.min.js'></script>
-	<script>
+    <script type='text/javascript' src='src/js/letrero.js'></script>
+    <script>
 		jQuery(function(){
 
 			jQuery('#camera_wrap_1').camera({
@@ -43,6 +44,7 @@
 			});
 		});
 	</script>
+
 </head>
 	<body>
 		<header>
@@ -56,6 +58,15 @@
 
 				<section id="espacio_sup">
 				<a href="src/html/inicio.html" style = " float:right">Inicio de sesion</a>
+				
+				<div  id = "letrero" style = "position: absolute">
+				<span>
+				<img src="src/images/cafe.gif" draggable="false">
+				<font size="5">Kfetal</font>
+				<img src="src/images/cafe.gif" draggable="false">
+				</span>
+				<div>
+
 				</section>
 				<nav id="menuNav">
 					<ul>
