--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
  	<script src= "../js/moverMesa.js"></script>
+ 	<script type='text/javascript' src='../js/letrero.js'></script>
 	<style>
 	.mesaTop{position: absolute; top: 17em; left: 3em;}
 	.mesaBottom{position: absolute; top: 28em; left: 3em;}
@@ -31,6 +32,14 @@
 
 				<section id="espacio_sup">
 					<a href="inicio.html" style = " float:right">Inicio de sesion</a>
+
+				<div  id = "letrero" style = "position: absolute">
+				<span>
+				<img src="../images/cafe.gif" draggable="false">
+				<font size="5">Kfetal</font>
+				<img src="../images/cafe.gif" draggable="false">
+				</span>
+				<div>
 				</section>
 
 
