--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -5,7 +5,7 @@
     <title>El Kfetal®</title>
     <script type='text/javascript' src='../js/jquery-2.1.3.min.js'></script>
     <script type='text/javascript' src='../js/script_menu.js'></script>
-    <link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
+    <script type='text/javascript' src='../js/letrero.js'></script>..  <link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
     <link rel="stylesheet" type="text/css" href="../css/estilo1.css">
     <!--COpia de INdex-->
     <link rel='stylesheet' id='camera-css'  href='../css/camera.css' type='text/css' media='all'>
@@ -62,6 +62,13 @@
 
                     <section id="espacio_sup">
                     <a href="inicio.html" style = " float:right">Inicio de sesion</a>
+                    <div  id = "letrero" style = "position: absolute">
+                     <span>
+                     <img src="../images/cafe.gif" draggable="false">
+                     <font size="5">Kfetal</font>
+                     <img src="../images/cafe.gif" draggable="false">
+                     </span>
+                     <div>
                     </section>
                     <nav id="menuNav">
                         <ul>
