--- a/src/html/nosotros.html
+++ b/src/html/nosotros.html
@@ -5,6 +5,7 @@
 
 	<link rel="stylesheet" href="../css/estilo1.css">
     <link rel="stylesheet" type="text/css" href="../css/miCss.css">
+    <script type='text/javascript' src='../js/letrero.js'></script>
 </head>
 
 
@@ -21,6 +22,13 @@
 
                 <section id="espacio_sup">
                 <a href="inicio.html" style = " float:right">Inicio de sesion</a>
+                <div  id = "letrero" style = "position: absolute">
+                <span>
+                <img src="../images/cafe.gif" draggable="false">
+                <font size="5">Kfetal</font>
+                <img src="../images/cafe.gif" draggable="false">
+                </span>
+                <div>
                 </section>
                 <nav id="menuNav">
                     <ul>
@@ -48,9 +56,6 @@
 <h3>Nuesta Historia</h3>
 <div class = "cuadro">
  <h5>Historia</h5>
-</div>
-<div class = "cuadro">
- <h5>Mapa de Ubicacion</h5>
 </div>
 <div class = "cuadro-derecho">
 <h5>Imagen</h5>
