manda confirmaciones por  correo

--- a/src/html/administrador/confirma_reservacion.html
+++ b/src/html/administrador/confirma_reservacion.html
@@ -1,36 +1,100 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
-<head>
+	<head>
 	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" >
 	<title>El Kfetal®</title>
+
 	<link rel="stylesheet" href="../../css/estilo1.css">
-</head>
+	<script type="text/javascript" src="../../ckeditor/ckeditor.js"></script>
+	</head>
 	<body>
-		<header>
-			<div id="menu">
 
-				<div id="logo">
-					<img src="../../images/Logo1.jpg" id="logoNav">
-				</div>
+  	<header>
+        <div id="menu">
 
-				<div id="navegacion">
+            <div id="logo">
+                <img src="../../images/Logo1.jpg" id="logoNav">
+            </div>
 
-					<section id="espacio_sup">
-						<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
+            <div id="navegacion">
 
-					</section>
-					<nav id="menuNav">
-						<ul>
+                <section id="espacio_sup">
+	<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
+
+                </section>
+                <nav id="menuNav">
+                    <ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
 			            	<li><a class="boton_menu" href="administra_promociones.html">Promociones</a></li>
 			            	<li><a class="boton_menu" href="envia_correo.html">Envia promociones</a></li>
-						</ul>
-					</nav>
-				</div>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
-			</div>
-		</header>
+		<center>
+		<h1>Confirma recervaciones </h1>
+		</center>
+		<br>
 
-	</body>
 
+		<div class="muestraHojita" style="
+    border: 1px solid;   width: 650px;   height: 90px;   margin-top: -35px;   margin-left: 290px;   margin-bottom: 5px;
+">
+
+
+		</div>
+
+
+
+
+		<div style = "width: 100.6%">
+
+
+		<textarea cols="50" id="editor1" name="editor1" rows="10">
+		</textarea>
+		<script type="text/javascript">
+		CKEDITOR.replace( 'editor1', {
+		toolbar: [
+			['Source','-','Save','NewPage','Preview','-','Templates'],
+			['Cut','Copy','Paste','PasteText','PasteFromWord','-','Print', 'SpellChecker', 'Scayt'],
+			['Undo','Redo','-','Find','Replace','-','SelectAll','RemoveFormat'],
+			['Form', 'Checkbox', 'Radio', 'TextField', 'Textarea', 'Select', 'Button', 'ImageButton', 'HiddenField'],
+			'/',
+			['Bold','Italic','Underline','Strike','-','Subscript','Superscript'],
+			['NumberedList','BulletedList','-','Outdent','Indent','Blockquote'],
+			['JustifyLeft','JustifyCenter','JustifyRight','JustifyBlock'],
+			['Link','Unlink','Anchor'],
+			['Image','Flash','Table','HorizontalRule','Smiley','SpecialChar','PageBreak'],
+			'/',
+			['Styles','Format','Font','FontSize'],
+			['TextColor','BGColor'],
+			['Maximize', 'ShowBlocks','-','About','EqnEditor']
+		]
+		});
+		</script>
+
+
+
+<br>
+<br>
+
+
+
+<button onclick="envia_confirmacion_correo()" > Aceptar </button>
+<br>
+<br>
+<br>
+
+<div id="data">
+
+</div>
+
+
+</body>
+
+<script src="../../js/script.js"></script>
 </html>
