hojitas ya casi

--- a/src/html/administrador/confirma_reservacion.html
+++ b/src/html/administrador/confirma_reservacion.html
@@ -41,7 +41,7 @@
 		<br>
 
 
-		<div class="muestraHojita" style="
+		<div id="info_hojita" class="muestraHojita" style="
     border: 1px solid;   width: 650px;   height: 90px;   margin-top: -35px;   margin-left: 290px;   margin-bottom: 5px;
 ">
 
