--- a/src/html/agenda_reservacion.html
+++ b/src/html/agenda_reservacion.html
@@ -6,9 +6,12 @@
 	<link rel="stylesheet" href="../css/estilo1.css">
 	<script type='text/javascript' src='../js/script.js'></script>
 	<script type='text/javascript' src='../js/jquery.min.js'></script>
-	
+
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+    <script type='text/javascript' src='../js/jquery.min.js'></script>
+    <script type='text/javascript' src='../js/script1.js'></script>
+
  	<script src= "../js/moverMesa.js"></script>
  	<script type='text/javascript' src='../js/letrero.js'></script>
 	<style>
@@ -44,9 +47,9 @@
 
 
 
-					<nav id="menuNav">
+					<nav id='cssmenu'>
 						<ul>
-		            	<li><a class="boton_menu" href="../../Index.html">Home</a></li>
+		            	<li class='active'><a class="boton_menu" href="../../Index.html">Home</a></li>
 		            	<li><a class="boton_menu" href="menu.html">Menú</a></li>
 		            	<li><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
 		            	<li><a class="boton_menu" href="contacto.html">Contacto</a></li>
