--- a/src/html/contacto.html
+++ b/src/html/contacto.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="../css/estilo1.css">
         <link rel="stylesheet" type="text/css" href="../css/miCss.css">
         <script type='text/javascript' src='../js/letrero.js'></script>
+    <script type='text/javascript' src='../js/jquery.min.js'></script>
+    <script type='text/javascript' src='../js/script1.js'></script>
+
 </head>
 
 
@@ -30,9 +33,9 @@
                 </span>
                 <div>
                 </section>
-                <nav id="menuNav">
+                <nav id='cssmenu'>
                     <ul>
-                        <li><a class="boton_menu" href="../../Index.html">Home</a></li>
+                        <li class='active'><a class="boton_menu" href="../../Index.html">Home</a></li>
                         <li><a class="boton_menu" href="menu.html">Menú</a></li>
                         <li><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
                         <li><a class="boton_menu" href="contacto.html">Contacto</a></li>
