--- a/src/html/inicio.html
+++ b/src/html/inicio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>El Kfetal®</title>
     <link rel="stylesheet" href="../css/estilo1.css">
+    <script type='text/javascript' src='../js/jquery.min.js'></script>
+    <script type='text/javascript' src='../js/script1.js'></script>
 
 </head>
 <body>
@@ -19,9 +21,9 @@
                 <section id="espacio_sup">
                 <a href="inicio.html" style = " float:right">Inicio de sesion</a>
                 </section>
-                <nav id="menuNav">
+                <nav id='cssmenu'>
                     <ul>
-                        <li><a class="boton_menu" href="../../Index.html">Home</a></li>
+                        <li class='active'><a class="boton_menu" href="../../Index.html">Home</a></li>
                         <li><a class="boton_menu" href="menu.html">Menú</a></li>
                         <li><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
                         <li><a class="boton_menu" href="contacto.html">Contacto</a></li>
