--- a/Index.html
+++ b/Index.html
@@ -24,11 +24,13 @@
 		}
 	</style>
 
-	<script type='text/javascript' src='src/js/jquery.min.js'></script>
+   <script type='text/javascript' src='src/js/jquery.min.js'></script>
     <script type='text/javascript' src='src/js/jquery.mobile.customized.min.js'></script>
     <script type='text/javascript' src='src/js/jquery.easing.1.3.js'></script>
     <script type='text/javascript' src='src/js/camera.min.js'></script>
     <script type='text/javascript' src='src/js/letrero.js'></script>
+    <script type='text/javascript' src='src/js/script1.js'></script>
+
     <script>
 		jQuery(function(){
 
@@ -58,7 +60,7 @@
 
 				<section id="espacio_sup">
 				<a href="src/html/inicio.html" style = " float:right">Inicio de sesion</a>
-				
+
 				<div  id = "letrero" style = "position: absolute">
 				<span>
 				<img src="src/images/cafe.gif" draggable="false">
@@ -68,9 +70,11 @@
 				<div>
 
 				</section>
-				<nav id="menuNav">
+
+
+				<nav id='cssmenu' >  <!-- id="menuNav">-->
 					<ul>
-		            	<li><a class="boton_menu" href="Index.html">Home</a></li>
+		            	<li class='active'><a class="boton_menu" href="Index.html">Home</a></li>
 		            	<li><a class="boton_menu" href="src/html/menu.html">Menú</a></li>
 		            	<li><a class="boton_menu" href="src/html/agenda_reservacion.html">Reservación</a></li>
 		            	<li><a class="boton_menu" href="src/html/contacto.html">Contacto</a></li>
