--- a/src/html/administrador/administra_promociones.html
+++ b/src/html/administrador/administra_promociones.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>El Kfetal®</title>
 	<link rel="stylesheet" href="../../css/estilo1.css">
+     <script type='text/javascript' src='../../js/jquery.min.js'></script>
+    <script type='text/javascript' src='../../js/script1.js'></script>
 </head>
 	<body>
 		<header>
@@ -21,7 +23,7 @@
 				<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
 
 					</section>
-					<nav id="menuNav">
+					<nav id='cssmenu'>
 						<ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
 			            	<li><a class="boton_menu" href="administra_promociones.html">Promociones</a></li>
