--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -8,6 +8,8 @@
 
 	<link rel="stylesheet" href="../../css/estilo1.css">
 	<script type="text/javascript" src="../../ckeditor/ckeditor.js"></script>
+     <script type='text/javascript' src='../../js/jquery.min.js'></script>
+    <script type='text/javascript' src='../../js/script1.js'></script>
 	</head>
 	<body>
 
@@ -24,7 +26,7 @@
 	<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
 
                 </section>
-                <nav id="menuNav">
+                <nav id='cssmenu'>
                     <ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
 			            	<li><a class="boton_menu" href="administra_promociones.html">Promociones</a></li>
