--- a/src/html/administrador/reservaciones.html
+++ b/src/html/administrador/reservaciones.html
@@ -6,7 +6,11 @@
 	<title>El Kfetal®</title>
 	<link rel="stylesheet" href="../../css/estilo1.css">
 	<script src="../../js/script.js" type="text/javascript"></script>
-	
+
+     <script type='text/javascript' src='../../js/jquery.min.js'></script>
+    <script type='text/javascript' src='../../js/script1.js'></script>
+
+
 </head>
 	<body>
 		<header>
@@ -22,7 +26,7 @@
 				<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
 
 					</section>
-					<nav id="menuNav">
+					<nav id='cssmenu'>
 						<ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
 			            	<li><a class="boton_menu" href="administra_promociones.html">Promociones</a></li>
