--- a/src/html/editor.html
+++ b/src/html/editor.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="../css/estilo_menu.css">
 	<link rel="stylesheet" href="../css/estilos1.css">
 	<script type="text/javascript" src="../ckeditor/ckeditor.js"></script>
+    <script type='text/javascript' src='../js/jquery.min.js'></script>
+    <script type='text/javascript' src='../js/script1.js'></script>
+
 	</head>
 <body>
 
@@ -22,9 +25,9 @@
                 <section id="espacio_sup">
                 <a href="inicio.html" style = " float:right">Inicio de sesion</a>
                 </section>
-                <nav id="menuNav">
+                <nav id='cssmenu'>
                     <ul>
-		            	<li><a class="boton_menu" href="../../Index.html">Home</a></li>
+		            	<li class='active'><a class="boton_menu" href="../../Index.html">Home</a></li>
 		            	<li><a class="boton_menu" href="menu.html">Menú</a></li>
 		            	<li><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
 		            	<li><a class="boton_menu" href="contacto.html">Contacto</a></li>
