--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -98,8 +98,8 @@
                     </ul>  
                 </div>
             <div class="contenido" id="galeria_menu">
-                <div style="width:65%">
-        <div class="fluid_container" id="galeria">
+                <div style="width:100%">
+        <div class="fluid_container">
 
             <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
                 <div data-thumb="../images/home/slides/thumbs/bridge.jpg" data-src="../images/home/slides/bridge.jpg">
