cambio Index a home

--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -73,7 +73,7 @@
                     </section>
                     <nav id='cssmenu'>
                         <ul>
-                           <li class="li_menu"><a class="boton_menu" href="../../Index.html">Home</a></li>
+                           <li class="li_menu"><a class="boton_menu" href="../../home.html">Home</a></li>
                             <li class="li_menu"><a class="boton_menu" href="menu.html">Menú</a></li>
                             <li class="li_menu"><a class="boton_menu" href="agenda_reservacion.html">Reservación</a></li>
                             <li class="li_menu"><a class="boton_menu" href="contacto.html">Contacto</a></li>
