--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
 			margin: 0 auto;
 			max-width: 1000px;
 			width: 90%;
+			height: 100%
 		}
 	</style>
 
@@ -91,40 +92,46 @@
 	</header>
 
 
-<div style="width:100%; height: 100%;">
-<div style="width:65%">
-	<div class="fluid_container" id="galeria">
+<div id="contenido" >
 
-        <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
-            <div data-thumb="src/images/home/slides/thumbs/bridge.jpg" data-src="src/images/home/slides/bridge.jpg">
+	<div id="galeria_imagenes">
+
+		
+		<div class="fluid_container">
+
+	        <div class="camera_wrap camera_azure_skin" id="camera_wrap_1">
+	            <div data-thumb="src/images/home/slides/thumbs/bridge.jpg" data-src="src/images/home/slides/bridge.jpg">
 
 
 
-            </div>
-            <div data-thumb="src/images/home/slides/thumbs/leaf.jpg" data-src="src/images/home/slides/leaf.jpg">
+	            </div>
+	            <div data-thumb="src/images/home/slides/thumbs/leaf.jpg" data-src="src/images/home/slides/leaf.jpg">
 
-            </div>
-            <div data-thumb="src/images/home/thumbs/road.jpg" data-src="src/images/home/slides/road.jpg">
+	            </div>
+	            <div data-thumb="src/images/home/thumbs/road.jpg" data-src="src/images/home/slides/road.jpg">
 
-            </div>
-            <div data-thumb="src/images/home/thumbs/sea.jpg" data-src="src/images/home/slides/sea.jpg">
+	            </div>
+	            <div data-thumb="src/images/home/thumbs/sea.jpg" data-src="src/images/home/slides/sea.jpg">
 
-            </div>
-            <div data-thumb="src/images/home/thumbs/shelter.jpg" data-src="src/images/home/slides/shelter.jpg">
+	            </div>
+	            <div data-thumb="src/images/home/thumbs/shelter.jpg" data-src="src/images/home/slides/shelter.jpg">
 
-            </div>
-            <div data-thumb="src/images/home/thumbs/tree.jpg" data-src="src/images/home/slides/tree.jpg">
+	            </div>
+	            <div data-thumb="src/images/home/thumbs/tree.jpg" data-src="src/images/home/slides/tree.jpg">
 
-            </div>
-    </div>
-</div>
-</div>
+	            </div>
+	    	</div>
+		</div>
+		
 
-	<div id="timeline" style="width:30% ">
-
-		<h1>Aqui van promociones</h1>
 	</div>
 </div>
+
+	<aside id="timeline">
+		<h1>Aqui van promociones</h1>
+	</aside>
+
+
 
 
 
