ya inserta en la base , estilos formulario , inicio sesion

--- a/src/html/administrador/confirma_reservacion.html
+++ b/src/html/administrador/confirma_reservacion.html
@@ -23,7 +23,7 @@
             <div id="navegacion">
 
                 <section id="espacio_sup">
-	<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
+	<a href="../../../home.html" style = " float:right">Cerrar sesion</a>
 
                 </section>
                 <nav id='cssmenu'>
