--- a/src/html/administrador/envia_correo.html
+++ b/src/html/administrador/envia_correo.html
@@ -23,7 +23,7 @@
             <div id="navegacion">
 
                 <section id="espacio_sup">
-	<a href="../../../Index.html" style = " float:right">Cerrar sesion</a>
+	<a href="../../../home.html" style = " float:right">Cerrar sesion</a>
 
                 </section>
                 <nav id='cssmenu'>
