--- a/src/html/administrador/confirma_reservacion.html
+++ b/src/html/administrador/confirma_reservacion.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="../../ckeditor/ckeditor.js"></script>
      <script type='text/javascript' src='../../js/jquery.min.js'></script>
     <script type='text/javascript' src='../../js/script1.js'></script>
+    <script type='text/javascript' src='../../js/jquery.js'></script>
 	</head>
 	<body>
 
