--- a/src/html/administrador/reservaciones.html
+++ b/src/html/administrador/reservaciones.html
@@ -9,7 +9,7 @@
 
      <script type='text/javascript' src='../../js/jquery.min.js'></script>
     <script type='text/javascript' src='../../js/script1.js'></script>
-
+    <script type='text/javascript' src='../../js/script.js'></script>
 
 </head>
 	<body>
@@ -29,7 +29,7 @@
 					<nav id='cssmenu'>
 						<ul>
 			            	<li><a class="boton_menu" href="reservaciones.html">Reservaciones</a></li>
-			            	<li><a class="boton_menu" href="administra_promociones.html">Promociones</a></li>
+			            	<li><a class="boton_menu" onclick="pidePromociones()">Promociones</a></li>
 			            	<li><a class="boton_menu" href="envia_correo.html">Envia promociones</a></li>
 						</ul>
 					</nav>
